Split Code and build with PSRAM(cant be used) and hold HTTPS Connectin open

--- a/code/ShoeFirmware/platformio.ini
+++ b/code/ShoeFirmware/platformio.ini
@@ -13,5 +13,7 @@ platform = espressif32
 board = esp32-s2-saola-1
 framework = arduino
 monitor_speed = 115200
-lib_deps = https://github.com/tzapu/WiFiManager
-    tobiasschuerg/ESP8266 Influxdb@^3.13.1
+lib_deps = 
+	https://github.com/tzapu/WiFiManager
+	tobiasschuerg/ESP8266 Influxdb@^3.13.1
+	joaolopesf/SerialDebug @ ^0.9.82
