--- a/code/ShoeFirmware/platformio.ini
+++ b/code/ShoeFirmware/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32-s2-saola-1
 framework = arduino
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	https://github.com/tzapu/WiFiManager
 	tobiasschuerg/ESP8266 Influxdb@^3.13.1
